i loooovvveeee coding. spent 2.5hrs trying to fix mouse position on textarea box when all i had to do was uncheck text-align: center. AHHHHHHHH

--- a/src/Components/Screens/Postdetail.css
+++ b/src/Components/Screens/Postdetail.css
@@ -1,4 +1,4 @@
-.postdetail {
+.post-detail {
 	display: flex;
 	height: 1000vh;
 	margin-left: auto;
